--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
 </body>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://tympanus.net/Development/Arctext/js/jquery.arctext.js"></script>
+    <script type="text/javascript" src="https://tympanus.net/Development/Arctext/js/jquery.arctext.js"></script>
     <script src="./index.js"></script>
 
 </html>
